--- a/PRODIGY_WD_01/index.html
+++ b/PRODIGY_WD_01/index.html
@@ -3,17 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Interactive Navigation Menu</title>
+<title>Navigation Menu</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="navbar" id="navbar">
-  <a href="#">Home</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Contact</a>
+  <a href="index.html" class="nav-item">Home</a>
+  <a href="about.html" class="nav-item">About</a>
+  <a href="services.html" class="nav-item">Services</a>
+  <a href="contact.html" class="nav-item">Contact</a>
+</div>
+<div class="content">
+  <h1>Welcome to Home Page</h1>
+  <p>This is the home page content.</p>
 </div>
 <script src="script.js" defer></script>
-</script>
 </body>
 </html>
